fixing the X because it looks different on mobile compared to desktop

--- a/Resources/styles.css
+++ b/Resources/styles.css
@@ -116,8 +116,8 @@ header section div {
 }
 
 .open .bar1 {
-    -webkit-transform: rotate(-45deg) translate(-6px, 11px);
-    transform: rotate(-45deg) translate(-6px, 11px);
+    -webkit-transform: rotate(-45deg) translate(-5px, 13px);
+    transform: rotate(-45deg) translate(-5px, 13px);
 }
 
 .open .bar2 {
